--- a/dlink2.html
+++ b/dlink2.html
@@ -18,7 +18,7 @@ label {font-family: Georgia;font-size: 1.5em;}
 .block{ padding-top: 1em; margin-bottom: 1em;text-align:center}
 #but{ border-radius:8px; background: #32A4D6; color: #fff; font-family: Helvatica, Arial, Tahoma, sans-serif; font-size: 1.2em; padding: 5px 5px; cursor:pointer; margin: 0em auto 1em; display: block; min-width: 30%; clear: both;}
 iframe { margin:0em auto 1em; display: block; position:relative; max-width: 100%; }
-/* CSS3 ordered list Rectangle style by www.bloggerspice.com */
+/* CSS3 ordered list Rectangle style by Furqan Corbin */
 ol {counter-reset:li;list-style: none;font:15px;
 padding:0;margin-bottom:4em;margin-left:2.5em;text-shadow: 0 1px 0 rgba(255,255,255,.5);}
 ol ol {margin: 0 0 0 2em;}
@@ -46,7 +46,7 @@ kbd{font-size:80%;border:1px solid #999;padding:2px 5px;border-bottom-width:2px}
 How to create direct links with this tool?</h2>
 <ol>
 <li>First you must obtain the share URL.</li>
-<li>Here is the <a href="https://furqancorbin.blogspot.com/p/drivelink.html" target="_blank">Guide to obtain Share link</a>.</li>
+<li>Here is the <a href="https://furqancorbin.blogspot.com/p/directlink.html" target="_blank">Guide to obtain Share link</a>.</li>
 <li>Paste that link in the <kbd>'Enter Share link'</kbd> textbox.</li>
 <li>Then, press <kbd>Enter</kbd> or click Generate.</li>
 <li>Press <kbd>Ctrl + C</kbd> to copy the direct link to your clipboard.</li>
@@ -62,7 +62,7 @@ Important notes</h2>
 </div>
 <div style="clear: both;">
 </div>
-<div id="frameContainer">
+
 </div>
 <div><h4 style="-webkit-font-smoothing: antialiased; background: 0px 0px rgb(255, 255, 255); border: 0px; box-sizing: border-box; color: var(--title-color); font-family: Rubik, Arial, sans-serif; font-size: 17px; line-height: 1.3em; margin: 0px 0px 20px; outline: 0px; overflow-wrap: break-word; padding: 0px; text-rendering: optimizelegibility; vertical-align: baseline; word-break: break-word;">Copyright © 2018-2021 All Right Reserved</h4><h4 style="text-align: left;"><span style="font-family: times;"><i>Powered by <a href="http://furqancorbin.blogspot.com">Furqan Corbin</a></i></span></h4><div style="-webkit-font-smoothing: antialiased; background: 0px 0px rgb(255, 255, 255); border: 0px; box-sizing: border-box; color: #65656a; font-family: Rubik, Arial, sans-serif; font-size: 15px; margin: 0px; outline: 0px; overflow-wrap: break-word; padding: 0px; text-rendering: optimizelegibility; vertical-align: baseline; word-break: break-word;"><i style="-webkit-font-smoothing: antialiased; background: 0px 0px; border: 0px; box-sizing: border-box; font-family: times; margin: 0px; outline: 0px; overflow-wrap: break-word; padding: 0px; text-rendering: optimizelegibility; vertical-align: baseline; word-break: break-word;">Thanks for using Furqan Corbin Tools More Tools Available on&nbsp;</i></div><div style="-webkit-font-smoothing: antialiased; background: 0px 0px rgb(255, 255, 255); border: 0px; box-sizing: border-box; color: #65656a; font-family: Rubik, Arial, sans-serif; font-size: 15px; margin: 0px; outline: 0px; overflow-wrap: break-word; padding: 0px; text-rendering: optimizelegibility; vertical-align: baseline; word-break: break-word;"><a href="http://furqancorbin.blogspot.com/" style="-webkit-font-smoothing: antialiased; background: 0px 0px; border: 0px; box-sizing: border-box; font-family: times; font-style: italic; margin: 0px; outline: 0px; overflow-wrap: break-word; padding: 0px; text-decoration-line: none; text-rendering: optimizelegibility; transition: all 0s ease 0s; vertical-align: baseline; word-break: break-word;">furqancorbin.blogspot.com</a>&nbsp;more Information and support please&nbsp;<a href="https://furqancorbin.blogspot.com/p/contactme.html?m=1" rel="nofollow" style="-webkit-font-smoothing: antialiased; background: 0px 0px; border: 0px; box-sizing: border-box; margin: 0px; outline: 0px; overflow-wrap: break-word; padding: 0px; text-decoration-line: none; text-rendering: optimizelegibility; transition: all 0s ease 0s; vertical-align: baseline; word-break: break-word;">Contact us</a></div></div>
 
